...
    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity3_display_message"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/adminInput"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:background="@android:color/holo_red_light"
        />

    <EditText
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_back_button"
            android:layout_alignParentStart="true"
            />
        <Button
            android:id="@+id/adminLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_alignParentEnd="true"
            />

...
