...
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/className"
                android:layout_alignParentEnd="true"
                android:layout_width="150dp"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </RelativeLayout>

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        >
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:textSize="18sp"
...
