<resources>
    <string name="app_name">TableMaker</string>
    <string name="activity1_display_message">Enter Student ID</string>
    <string name="admin_topbar_display_message">Admin DB Editor</string>
    <string name="login_button">Login</string>
    <string name="back_button">Back to login</string>
    <string name="timetable_title">Timetable for </string>
    <string name="studentID">Student ID</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="times">8</string>
    <string name="changeStudentID">Change Student ID</string>
    <string name="editTimetable">Edit Timetable</string>
    <string name="change_student_id">Change Student ID</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_login_password">Admin Login Password</string>
    <string name="login">Login</string>
    <string name="activity3_display_message">Admin Password</string>
    <string name="admin_back_button">Back</string>
    <string name="admin_edit_student_id">Student ID</string>
    <string name="title_day">Day:</string>
    <string name="title_time">Time:</string>
    <string name="title_duration">Duration:</string>
    <string name="title_roomNumber">Room Number:</string>
    <string name="btn_save">Save</string>
    <string name="appwidget_text">No Class</string>
    <string name="appwidget_text_2">Please Login</string>
    <string name="add_widget">Add widget</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="confirm">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_cell">Delete Cell</string>
</resources>
